force-app/main/default/objects/Session_Participant__c/Session_Participant__c.object-meta.xml
<CustomObject>
    <description>Used for tracking session attendance above.</description>
    <label>Session Participant</label>
    <nameField>
        <displayFormat>SP{00000}</displayFormat>
        <label>Session Participant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>