force-app/main/default/objects/Session_Participant__c/fields/Family_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Family_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family / Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Session Participants</relationshipLabel>
    <relationshipName>Session_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>