force-app/main/default/objects/Session_Participant__c/fields/Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type__c</fullName>
    <label>Participant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Celebrity</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Companion</fullName>
            </value>
            <value>
                <fullName>Corporate Volunteer</fullName>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>