force-app/main/default/objects/Session_Participant__c/fields/Volunteer_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Attendance</label>
    <referenceTo>Volunteer_Attendance__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Session_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>