force-app/main/default/objects/Session_Participant__c/fields/Volunteer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer / Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Participants</relationshipLabel>
    <relationshipName>Session_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>